--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ button {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-link::after {
+.menu-link.current::after {
   content: "";
 
   position: absolute;
@@ -145,12 +145,8 @@ button {
   height: 4px;
   background-color: var(--pressed-state-color);
   border-radius: 2px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-link:hover::after {
   opacity: 1;
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .menu-link:hover,
